--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <title>ENGZLY</title>
-<body> <h1>you can do any thing faster</h1> 
-    <p>We have brought you life. Everything you need
-        (groceries, vegetables, fruits, medicines, restaurants, etc.) </p>
+<body>
+     <h1>you can do any thing faster</h1> 
+    <p>We have brought you life. Everything you need (groceries, vegetables, fruits, medicines, restaurants, etc.) </p>
     <h2>we will bring for you every thing you want</h2> 
     <p>With one click you can get everything you need. Our logo<b>(life easier)</b> </p> 
     <h3>24h all day work to make your life easier</h3>
