--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,7 +14,6 @@
     <p>We always work to ensure your comfort and provide you with the best things as quickly as possible. We carefully selected our representatives to make you feel comfortable and happy.</p>
    
    <img src="https://i.pinimg.com/originals/f0/ff/43/f0ff431720f58ad28e816c551c68b9d0.jpg">
-
-    
+   <a href="tweets.html" target="-blank">tweets</a>
     </body>
     </html>
