--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,7 @@
     </head>
     <title>ENGZLY</title>
     <body>
+        <img src="https://i.pinimg.com/originals/f0/ff/43/f0ff431720f58ad28e816c551c68b9d0.jpg">
      <h1>you can do any thing faster</h1> 
     <p>We have brought you life. Everything you need (groceries, vegetables, fruits, medicines, restaurants, etc.) </p>
     <h2>we will bring for you every thing you want</h2> 
@@ -13,7 +14,15 @@
     <h3>24h all day work to make your life easier</h3>
     <p>We always work to ensure your comfort and provide you with the best things as quickly as possible. We carefully selected our representatives to make you feel comfortable and happy.</p>
    
-   <img src="https://i.pinimg.com/originals/f0/ff/43/f0ff431720f58ad28e816c551c68b9d0.jpg">
+   
    <a href="tweets.html" target="-blank">tweets</a>
+   header>
+    <h3>ENGZLY</h3>
+    <ul>
+<li> <a href="tweets.html">show tweets</a> </li>   
+<li><a href="index.html">my website <index class="html"></index></a></li>
+</ul>
+
+</header>
     </body>
     </html>
