--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,15 +14,67 @@
     <h3>24h all day work to make your life easier</h3>
     <p>We always work to ensure your comfort and provide you with the best things as quickly as possible. We carefully selected our representatives to make you feel comfortable and happy.</p>
    
-   
    <a href="tweets.html" target="-blank">tweets</a>
-   header>
-    <h3>ENGZLY</h3>
-    <ul>
-<li> <a href="tweets.html">show tweets</a> </li>   
-<li><a href="index.html">my website <index class="html"></index></a></li>
-</ul>
 
+ <header>  
+<h3>ENGZLY</h3>
+<ul>
+<li> <a href="tweets.html">show tweets</a> </li>   
+<li> <a href="index.html">my website </a></li>
+</ul>
 </header>
+<main>
+    <article>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Just inspected the Starship launch pad and it is in great condition! <br><br>No refurbishment needed to the water-cooled steel plate for next launch.<br><br>Congrats to <a href="https://twitter.com/SpaceX?ref_src=twsrc%5Etfw">@Spacex</a> team &amp; contractors for engineering &amp; building such a robust system so rapidly! <a href="https://t.co/py5m1uhtEi">pic.twitter.com/py5m1uhtEi</a></p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1726328010499051579?ref_src=twsrc%5Etfw">November 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Thanks also to <a href="https://twitter.com/FAANews?ref_src=twsrc%5Etfw">@FAANews</a> and <a href="https://twitter.com/NFWFnews?ref_src=twsrc%5Etfw">@NFWFnews</a> for rapid approval of a complex launch license <a href="https://t.co/QSDo8s1Z19">https://t.co/QSDo8s1Z19</a></p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1726342359615705346?ref_src=twsrc%5Etfw">November 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <img src="https://i.pinimg.com/originals/f0/ff/43/f0ff431720f58ad28e816c551c68b9d0.jpg">
+        <h1>you can do any thing faster</h1> 
+       <p>We have brought you life. Everything you need (groceries, vegetables, fruits, medicines, restaurants, etc.) </p>
+       <h2>we will bring for you every thing you want</h2> 
+       <p>With one click you can get everything you need. Our logo<b>(life easier)</b> </p> 
+       <h3>24h all day work to make your life easier</h3>
+       <p>We always work to ensure your comfort and provide you with the best things as quickly as possible. We carefully selected our representatives to make you feel comfortable and happy.</p>
+      <table border="1px" width="500px">
+        <thead>
+            <th>name</th>
+            <th>age</th>
+            <th>country</th>
+        </thead>
+       <tbody>
+        <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+        </tr>
+        <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>canda</td>
+        </tr>
+        <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+        </tr>
+        <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+        </tr>
+       </tbody> 
+      </table>
+       
+        
+    </article>
+    <aside> contains a single paragraph, just reading for now “placeholder to add comment thread later”.</aside>
+</main>
+
+ 
+
+
+<footer> made by AYAABDELNABI <a href="tweets.html">click here</a></footer>
+
+
+
     </body>
     </html>
