--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -38,7 +38,7 @@
     <aside> contains a single paragraph, just reading for now “placeholder to add comment thread later”.</aside>
 </main>
 
-<footer><b>made by</b> AYAABDELNABI <a href="index.html">click index. html</a></footer>
+<footer><b>made byAYAABDELNABI</b>  <a href="index.html">click index. html</a></footer>
 
 <a href="index.html" target="_blank">click here to show </a>
     
