--- a/headphone/1-index.html
+++ b/headphone/1-index.html
@@ -17,7 +17,7 @@
     <section class="hero">
         <nav class="nav">
             <div class="header_container">
-                <a href=""><img src="headphones/image/logo_headphones.jpg" class="logo" alt="logo_headphones"></a>
+                <a href=""><img src="headphones/images/headphones_hero_1" class="logo" alt="logo_headphones"></a>
                 <ul class="nav-list">
                     <!-- NAVBAR -->
                     <li class="nav-item"><a href="#what_we_do"><b>what we do</b></a></li>
